corrected spacing for material specs

--- a/client/layout/web_plank.css
+++ b/client/layout/web_plank.css
@@ -2,14 +2,27 @@
 
 /*icon colors*/
 
-
+.right-nav-padding{
+  padding-right: 24px;
+}
 nav .button-collapse {
     float: left;
     position: relative;
     z-index: 1;
     height: 56px;
-    padding-left: 50px;
-    
+    padding-left: 24px;
+    color: #262626;
+
+}
+
+nav .brand-logo {
+    position: absolute;
+    color: #262626;
+    display: inline-block;
+    font-size: 2.1rem;
+    padding: 0;
+    padding-left: 80px;
+    white-space: nowrap;
 }
 
 .red{
@@ -21,17 +34,26 @@ nav .button-collapse {
 }
 
 nav {
-    color: #fff;
-    background-color: #009688;
+    color: #262626;
+    background-color: #03A9F4;
     width: 100%;
-    height: 120px;
+    height: 126px;
     line-height: 56px;
 }
 
 .nav2{
     background-color: #fff;
     width: 100%;
-    height: 120px;
+    height: 126px;
+    line-height: 56px;
+    color: #262626;
+}
+
+
+.nav3{
+    background-color: #069BDE;
+    width: 100%;
+    height: 126px;
     line-height: 56px;
     color: #262626;
 }
@@ -40,6 +62,9 @@ nav {
   color: #00ACC1;
 }
 
+.utility-icons-dark{
+  color: #262626;
+}
 .utility-icons-red{
   color: #F44336;
 }
